# crossgene

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
artifacts/: ANALYSIS.md  ARCHITECTURE.md  FEATURE_BLACKLIST.md  FEATURE_bed_overlay.md  FEATURE_hit_bed_export.md  IMPLEMENTATION.md  IMPLEMENTATION_bed_overlay.md  IMPLEMENTATION_flanking.md  IMPLEMENTATION_hit_bed_export.md  IMPLEMENTATION_query_coverage.md  IMPLEMENTATION_v2.md  ISSUES_v2.md  PLAN_cleanup.md  PLAN_concat_pdfs.md  PLAN_debug_and_sensitivity_refactor.md  PLAN_realign_merged_hits.md  PLAN_remove_revcomp.md
compare_genes/: __init__.py  align.py  blastn.py  cli.py  fragment.py  gene_extractor.py  models.py  parser.py  parser_blast.py  scores.py  tsv_writer.py  visualize.py
crossgene/: __init__.py  align.py  bed_parser.py  bed_writer.py  bigwig.py  blastn.py  cli.py  fragment.py  gene_extractor.py  models.py  parser.py  parser_blast.py  presets.json  presets.py  scores.py  tsv_writer.py  visualize.py
scripts/: concat_optimization_pdfs.py  process_2x.sh
tests/: test_align.py  test_bed_parser.py  test_bed_writer.py  test_bigwig.py  test_blastn.py  test_cli.py  test_fragment.py  test_gene_extractor.py  test_parser.py  test_parser_blast.py  test_presets.py  test_scores.py  test_tsv_writer.py  test_visualize.py
